--- a/scss/css.scss
+++ b/scss/css.scss
@@ -5,7 +5,7 @@
 }
 @font-face {
     font-family: iconos;
-    src: url(Glyphter.ttf);
+    src: url(GLYPHTER.TTF);
     font-weight: bold;
 } 
 body{
