--- a/css/css.css
+++ b/css/css.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: iconos;
-  src: url(Glyphter.ttf);
+  src: url(GLYPHTER.TTF);
   font-weight: bold; }
 body {
   background-color: #3d3d3d; }
