--- a/scss/css.scss
+++ b/scss/css.scss
@@ -82,12 +82,12 @@ nav span{
 }
 #controles #barraCarga{
     width: 300px;
-    height: 75%;
+    height: 45px;
     margin-top: 0.5%;
 }
 #controles #barraVolumen{
     width: 300px;
-    height: 75%;
+    height: 45px;
     margin-top: 0.5%;
     border: 1px solid black;
 }
@@ -159,8 +159,14 @@ footer {
     vertical-align: text-top;
     background-color: gray;
     border-bottom: 3px solid black;
+	display: flex;
 }
+#textoLicencia{
+  font-size: 1.5em;
+  vertical-align: middle;
+  padding-top: 18px;
 
+}
 /*
     Estilo video
 
