--- a/css/css.css
+++ b/css/css.css
@@ -60,7 +60,7 @@ nav span {
   width: 40px;
   height: 40px;
   font-size: 1.8em;
-  margin-top: 0.7%;
+  margin-top: 0%;
   background: none;
   color: inherit;
   border: none;
@@ -75,18 +75,19 @@ nav span {
 #tiempo {
   width: 40px;
   height: 40px;
-  font-size: 1.1em;
-  margin-top: 1.2%; }
+  font-size: 1.3em;
+  margin-top: 0.5%;
+	color: white;}
 
 #controles #barraCarga {
   width: 300px;
-  height: 75%;
-  margin-top: 0.5%; }
+    height: 40px;
+  margin-top: 0%; }
 
 #controles #barraVolumen {
   width: 300px;
-  height: 75%;
-  margin-top: 0.5%;
+    height: 40px;
+  margin-top: 0%;
   border: 1px solid black; }
 
 #barritaVolumen {
@@ -152,8 +153,15 @@ footer {
   height: fit-content;
   vertical-align: text-top;
   background-color: gray;
-  border-bottom: 3px solid black; }
+  border-bottom: 3px solid black; 
+  display:flex;}
+#textoLicencia{
+  
+  font-size: 1.5em;
+  vertical-align: middle;
+  padding-top: 18px;
 
+}
 /*
     Estilo video
 
