--- a/public_html/css/css.css
+++ b/public_html/css/css.css
@@ -181,7 +181,7 @@ footer {
 
 /*
 
-    MENOS DE 1280PX = ACTIVAR RESPONSIVIDAD MÓVIL
+    MENOS DE 1280PX = ACTIVAR RESPONSIVIDAD M├ôVIL
 
 */
 @media screen and (max-width: 1280px) {
